<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity" >

    <com.philipoy.picss.views.PicssSurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="autofocus"
      />

    <ImageButton
        android:id="@+id/btn_capture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:contentDescription="@string/desc_capture"
        android:src="@drawable/content_new_picture" />
    
    <ImageButton
        android:id="@+id/btn_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/desc_switch_cam"
        android:onClick="switchCamera"
        android:src="@drawable/device_access_switch_camera"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/imageMic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible"
        android:contentDescription="@string/desc_mic"
        android:src="@drawable/device_access_mic" />

    <ProgressBar
        android:id="@+id/progressRec"
        style="?android:attr/progressBarStyleHorizontal"
        android:progressDrawable="@drawable/picss_record_progress"
        android:layout_width="200dp"
        android:max="2000"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_switch"
        android:layout_alignBottom="@+id/btn_switch"
        android:layout_toLeftOf="@+id/btn_switch" />

</RelativeLayout>
